Archive2/c1/9a2207d8ed8b0e/output
main.cpp:13:2: error: 'hrtrth' does not name a type
 }hrtrth
  ^
main.cpp:22:1: error: 'fvdfsabvdafb' does not name a type
 fvdfsabvdafb
 ^
